--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,6 +5,9 @@
     "activeTab",
     "storage"
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "name": "Browser Jack-in",
   "icons": {
     "16": "icons\/icon-16.png",
