Add kondo configs

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ build/
 # Squint compiled output (intermediate .mjs files)
 extension/*.mjs
 docs/working-backwards/
+.nrepl-port
+!.clj-kondo/imports/
+.clj-kondo/cache/
+.lsp/cache/
