Dev: Add search exclude patrerns

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,12 @@
         "primary": "squint"
       }
     }
-  ]
+  ],
+  "search.exclude": {
+    ".calva/**": true,
+    "**/*.mjs": true,
+    "build/**": true,
+    "dist/**": true,
+    "node_modules/**": true
+  }
 }
