Add Vitest testing infrastructure for Squint projects
- Configure Vitest as test runner with vitest.config.js
- Create test/script_utils_test.cljs with 14 tests for URL pattern matching
- Add bb tasks: test, test:watch, test:watch:squint, test:watch:vitest
- Add npm test scripts and vitest dev dependency
- Update CI workflow to run tests before build
- Document testing setup in dev.md and copilot-instructions.md

Tests cover url-matches-pattern? and get-matching-pattern functions with
various URL pattern formats including wildcards, protocols, and edge cases.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,9 @@ jobs:
           restore-keys: |
             bb-deps-${{ runner.os }}-
 
+      - name: Run tests
+        run: bb test
+
       - name: Build extensions
         run: bb build
 
