--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,9 @@ name: Build Extension
 
 on:
   push:
-    branches: [master]
     tags: ['v*']
+    branches: ['**']
   pull_request:
-    branches: [master]
 
 jobs:
   build:
