--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "squint-cljs": "^0.9.182",
     "vitest": "^2.1.3"
   },
