WIP: Background-managed connect flow for E2E testing
Implements explicit tab targeting and moves connect orchestration to background worker to unblock Phase 3 integration testing.

Key changes:
- background.cljs: Added connect-tab, check-status, and e2e/find-tab-id message handlers for explicit tab targeting
- popup.cljs: Refactored to call background APIs instead of direct injection, removed dead code
- e2e/repl_test.clj: New integration tests using background APIs instead of popup click
- tasks.clj: Fixed to inject EXTENSION_CONFIG into background.js for dev-only test hooks
- bb.edn: Changed test:repl to depend on build:dev, added nrepl-client dep
- dev/docs/background-connect-plan.md: Implementation plan document
- Manifest version bumped to 0.0.7.39 (dev build)

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,5 +1,5 @@
 {
-  "description": "Live tamper your web using Clojure. Jack your Clojure editor into any web page",
+  "description": "Live tamper your web. Use existing userscripts or develop your own. Jack your  editor into any web page to tamper with it in real-time. Or let your AI agent hack the page while you are browsing.",
   "host_permissions": [
     "<all_urls>"
   ],
@@ -30,7 +30,7 @@
     }
   },
   "manifest_version": 3,
-  "version": "0.0.7.32",
+  "version": "0.0.7.39",
   "web_accessible_resources": [
     {
       "resources": [
