--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,21 +36,111 @@ jobs:
           restore-keys: |
             bb-deps-${{ runner.os }}-
 
-      - name: Run tests
-        run: bb test
+      - name: Build extension for testing
+        run: bb build:test
 
-      - name: Build extensions
+      - name: Compile test files
+        run: |
+          npx squint compile --paths src test --output-dir build/test
+          npx squint compile --paths src e2e --output-dir build/e2e
+
+      - name: Upload test build
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-build
+          path: |
+            dist/
+            build/
+            extension/
+
+      - name: Build release extensions
         run: bb build
 
-      - name: Upload artifacts
+      - name: Upload release artifacts
         uses: actions/upload-artifact@v4
         with:
           name: browser-extensions
           path: dist/*.zip
 
+  unit-tests:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Download test build
+        uses: actions/download-artifact@v4
+        with:
+          name: test-build
+
+      - name: Run unit tests
+        run: npx vitest run
+
+  e2e-tests:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Setup Babashka
+        uses: DeLaGuardo/setup-clojure@13.4
+        with:
+          bb: latest
+
+      - name: Cache Babashka dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gitlibs
+            ~/.m2
+          key: bb-deps-${{ runner.os }}-${{ hashFiles('bb.edn') }}
+          restore-keys: |
+            bb-deps-${{ runner.os }}-
+
+      - name: Download test build
+        uses: actions/download-artifact@v4
+        with:
+          name: test-build
+
+      - name: Install Playwright browsers
+        run: npx playwright install chromium
+
+      - name: Run Playwright E2E tests
+        run: xvfb-run --auto-servernum bb test:e2e
+
+      - name: Run REPL integration tests
+        run: xvfb-run --auto-servernum bb test:repl-e2e
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: |
+            test-results/
+            playwright-report/
+
   release:
     if: startsWith(github.ref, 'refs/tags/v')
-    needs: [build]
+    needs: [build, unit-tests, e2e-tests]
     runs-on: ubuntu-latest
     permissions:
       contents: write
