--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Upload release artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: browser-extensions-${{ github.ref_name }}-${{ steps.version.outputs.version }}
+          name: browser-extensions-${{ github.run_id }}-${{ steps.version.outputs.version }}
           path: dist/*.zip
 
   build-test:
@@ -93,7 +93,7 @@ jobs:
       - name: Upload test build
         uses: actions/upload-artifact@v4
         with:
-          name: test-build-${{ github.ref_name }}
+          name: test-build-${{ github.run_id }}
           path: |
             dist/
             build/
@@ -117,7 +117,7 @@ jobs:
       - name: Download test build
         uses: actions/download-artifact@v4
         with:
-          name: test-build-${{ github.ref_name }}
+          name: test-build-${{ github.run_id }}
 
       - name: Run unit tests
         run: npx vitest run
@@ -155,7 +155,7 @@ jobs:
       - name: Download test build
         uses: actions/download-artifact@v4
         with:
-          name: test-build-${{ github.ref_name }}
+          name: test-build-${{ github.run_id }}
 
       - name: Install Playwright browsers
         run: npx playwright install chromium
@@ -170,7 +170,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report-${{ github.ref_name }}
+          name: playwright-report-${{ github.run_id }}
           path: |
             test-results/
             playwright-report/
@@ -199,7 +199,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: browser-extensions-${{ github.ref_name }}-${{ needs.build-release.outputs.version }}
+          name: browser-extensions-${{ github.run_id }}-${{ needs.build-release.outputs.version }}
           path: dist
 
       - name: Create Release
