Reuse bb tasks in docker container

--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -25,46 +25,26 @@ RUN npm ci
 # Copy babashka config for dependency caching
 COPY bb.edn deps.edn ./
 
-# Prime bb dependencies
-RUN bb --version
+# Download and cache Clojure/Babashka dependencies
+RUN bb prepare
 
 # Copy the rest of the project
 COPY . .
 
-# Build extension and compile tests
-RUN bb build:test \
-    && npx squint compile --paths src test --output-dir build/test \
-    && npx squint compile --paths src e2e --output-dir build/e2e
-
-# Create entrypoint script that manages Xvfb lifecycle properly
-# (xvfb-run hangs on some systems, so we start/stop Xvfb explicitly)
-# Suppress XKEYBOARD warnings by redirecting Xvfb stderr to /dev/null
-# Supports --repl-e2e flag to run REPL integration tests with browser-nrepl
+# Create entrypoint script that sets up Xvfb and delegates to bb tasks
+# Supports --repl-e2e flag to run REPL integration tests
 RUN echo '#!/bin/bash\n\
 Xvfb :99 -screen 0 1280x720x24 2>/dev/null &\n\
 sleep 1\n\
 export DISPLAY=:99\n\
 \n\
-# Check if running REPL integration tests\n\
 if [[ "$1" == "--repl-e2e" ]]; then\n\
-  shift  # Remove --repl-e2e from args\n\
-  # Start browser-nrepl in background\n\
-  bb browser-nrepl --nrepl-port 12345 --websocket-port 12346 &\n\
-  NREPL_PID=$!\n\
-  # Create test page and start HTTP server using Babashka\n\
-  mkdir -p build/e2e/test-pages\n\
-  echo "<!DOCTYPE html><html><head><title>Test Page</title></head><body><h1>Test Page</h1></body></html>" > build/e2e/test-pages/index.html\n\
-  bb -e "(require '"'"'[babashka.http-server :as http]) (http/serve {:port 8765 :dir \"build/e2e/test-pages\"}) @(promise)" &\n\
-  HTTP_PID=$!\n\
-  sleep 2  # Wait for servers to start\n\
-  npx playwright test --config e2e/playwright.repl.config.js --reporter=line "$@"\n\
-  EXIT_CODE=$?\n\
-  kill $NREPL_PID $HTTP_PID 2>/dev/null\n\
+  shift\n\
+  bb test:repl-e2e "$@"\n\
 else\n\
-  npx playwright test --reporter=line "$@"\n\
-  EXIT_CODE=$?\n\
+  bb test:e2e "$@"\n\
 fi\n\
-\n\
+EXIT_CODE=$?\n\
 pkill Xvfb\n\
 exit $EXIT_CODE' > /entrypoint.sh && chmod +x /entrypoint.sh
 
