--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "squint-cljs": "^0.9.182",
-    "vitest": "^2.1.3"
+    "vitest": "^4.0.16"
   },
   "dependencies": {
+    "edn-data": "^1.1.2",
     "reagami": "^0.0.36"
   },
   "scripts": {
