--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -34,20 +34,15 @@ COPY . .
 # Build extension and compile e2e tests
 RUN bb build:test && bb test:e2e:compile
 
-# Create entrypoint script that sets up Xvfb and delegates to bb tasks
-# The e2e tasks handle HTTP server lifecycle internally
-# Supports --repl-e2e flag to run REPL integration tests
+# Create entrypoint script that sets up Xvfb and runs E2E tests
+# The e2e tasks handle HTTP server and browser-nrepl lifecycle internally
+# REPL integration tests now run as part of the unified e2e suite
 RUN echo '#!/bin/bash\n\
 Xvfb :99 -screen 0 1280x720x24 2>/dev/null &\n\
 sleep 1\n\
 export DISPLAY=:99\n\
 \n\
-if [[ "$1" == "--repl-e2e" ]]; then\n\
-  shift\n\
-  bb test:repl-e2e:ci "$@"\n\
-else\n\
-  bb test:e2e:ci "$@"\n\
-fi\n\
+bb test:e2e:ci "$@"\n\
 EXIT_CODE=$?\n\
 pkill Xvfb\n\
 exit $EXIT_CODE' > /entrypoint.sh && chmod +x /entrypoint.sh
