Add :epupp/require feature for Scittle library dependencies
- New scittle-libs module resolves scittle:// URLs to bundled vendor libs
- Auto-resolves dependencies (e.g., Reagent loads React + ReactDOM)
- Manifest parser extracts :epupp/require from script metadata
- Panel UI shows require status in property table
- Background worker injects libraries before userscripts on page load
- Content bridge waits for script onload before proceeding
- All vendor libs added to manifest.json web_accessible_resources

Known limitation: Requires only work on auto-injection (page load).
Panel/popup manual eval does not inject requires yet (Phase 3B TODO).

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -30,12 +30,21 @@
     }
   },
   "manifest_version": 3,
-  "version": "0.0.7.286",
+  "version": "0.0.7.293",
   "web_accessible_resources": [
     {
       "resources": [
         "vendor/scittle.js",
         "vendor/scittle.nrepl.js",
+        "vendor/scittle.pprint.js",
+        "vendor/scittle.promesa.js",
+        "vendor/scittle.replicant.js",
+        "vendor/scittle.js-interop.js",
+        "vendor/scittle.reagent.js",
+        "vendor/scittle.re-frame.js",
+        "vendor/scittle.cljs-ajax.js",
+        "vendor/react.production.min.js",
+        "vendor/react-dom.production.min.js",
         "ws-bridge.js",
         "trigger-scittle.js"
       ],
