Add Scittle Dev REPL task and connect sequence
- .vscode/tasks.json: Added "Scittle Dev REPL" task (ports 31337/31338) and included it in default build dependencies
- .vscode/settings.json: Added "Scittle Dev REPL" Calva connect sequence for easy REPL connection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,15 @@
       "replSessionNames": {
         "primary": "squint"
       }
+    },
+    {
+      "name": "Scittle Dev REPL",
+      "projectType": "scittle",
+      // "projectRootPath": [".", "extension", "userscripts"],
+      "fallbackPort": 31337,
+      "replSessionNames": {
+        "primary": "scittle-dev-repl"
+      },
     }
   ],
   "search.exclude": {
