Add development tools for manifest testing
- Calva REPL sequences for GitLab and YouTube manual testing
- Manual test script with step-by-step REPL evaluation examples
- Demonstrates Replicant rendering and pprint library usage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,24 @@
       "replSessionNames": {
         "primary": "scittle-dev-repl"
       },
+    },
+    {
+      "name": "Scittle GitLab REPL",
+      "projectType": "scittle",
+      // "projectRootPath": [".", "extension", "userscripts"],
+      "fallbackPort": 13397,
+      "replSessionNames": {
+        "primary": "scittle-gitlab"
+      },
+    },
+    {
+      "name": "Scittle Youtube REPL",
+      "projectType": "scittle",
+      // "projectRootPath": [".", "extension", "userscripts"],
+      "fallbackPort": 13399,
+      "replSessionNames": {
+        "primary": "scittle-youtube"
+      },
     }
   ],
   "search.exclude": {
