Fix CI e2e test failures by ensuring Scittle vendor files are downloaded
Ensures Scittle ecosystem libraries are available during build:
- bundle-scittle now skips download if all files already exist (performance)
- build function calls bundle-scittle before compilation
- CI caches extension/vendor directory keyed by Scittle version (0.7.30)

Previously, new require_test.cljs tests failed in CI because vendor files
are gitignored and were not being downloaded during the build process.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,12 @@ jobs:
           restore-keys: |
             bb-deps-${{ runner.os }}-
 
+      - name: Cache Scittle vendor files
+        uses: actions/cache@v4
+        with:
+          path: extension/vendor
+          key: scittle-vendor-${{ runner.os }}-0.7.30
+
       - name: Build release extensions
         run: bb build
 
@@ -81,6 +87,12 @@ jobs:
           key: bb-deps-${{ runner.os }}-${{ hashFiles('bb.edn') }}
           restore-keys: |
             bb-deps-${{ runner.os }}-
+
+      - name: Cache Scittle vendor files
+        uses: actions/cache@v4
+        with:
+          path: extension/vendor
+          key: scittle-vendor-${{ runner.os }}-0.7.30
 
       - name: Build extension for testing
         run: bb build:test
