--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -140,7 +140,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shard: [1, 2, 3, 4]
+        shard: [1, 2, 3, 4, 5, 6]
     steps:
       - uses: actions/checkout@v4
 
@@ -176,8 +176,8 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install chromium
 
-      - name: Run Playwright E2E tests (shard ${{ matrix.shard }}/4)
-        run: xvfb-run --auto-servernum bb test:e2e:ci --shard=${{ matrix.shard }}/4
+      - name: Run Playwright E2E tests (shard ${{ matrix.shard }}/6)
+        run: xvfb-run --auto-servernum bb test:e2e:ci --shard=${{ matrix.shard }}/6
 
       - name: Upload test results
         if: always()
