refactor(tasks): reuse Docker entrypoint for e2e timing report
Eliminate duplicated server environment setup in e2e-timing-report./scripts/publish.clj
Now uses the standard Docker entrypoint (which handles Xvfb, HTTP server,
and browser-nrepl lifecycle) and passes --reporter=json for timing data.

Added extract-json-from-output helper to parse JSON from mixed output
containing server startup log messages.

Also includes:
- Add Babashka REPL task to dev environment
- Update copilot instructions to mention bb session
- Add bb to terminal auto-approve settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,5 +42,8 @@
     "build/**": true,
     "dist/**": true,
     "node_modules/**": true
+  },
+  "chat.tools.terminal.autoApprove": {
+    "bb": true
   }
 }
