--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 .DS_Store
 
 # Squint compiled output (intermediate .mjs files)
-extension/*.mjs
+extension/**/*.mjs
 
 # Vendor libraries (downloaded via bb bundle-scittle)
 extension/vendor/*.js
