--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -74,6 +74,18 @@
       }
     },
     {
+      "label": "Epupp GitHub REPL",
+      "type": "shell",
+      "command": "bb browser-nrepl --nrepl-port 11331 --websocket-port 11332",
+      "group": "build",
+      "isBackground": true,
+      "problemMatcher": [],
+      "presentation": {
+        "panel": "dedicated",
+        "group": "manual-testing"
+      }
+    },
+    {
       "label": "Babashka REPL",
       "type": "shell",
       "command": "bb nrepl-server",
@@ -94,6 +106,7 @@
         "Scittle Dev REPL",
         "Epupp Gitlab REPL",
         "Epupp YouTube REPL",
+        "Epupp GitHub REPL",
         "Babashka REPL"
       ],
       "group": {
