feat(web-installer): source icon from extension URL
- Add icons/icon.svg to web_accessible_resources manifest
- Add get-icon-url message handler in content bridge
- Fetch icon URL on init, use <img> with inline SVG fallback
- Single source for icon updates across extension and userscript

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -36,10 +36,11 @@
     }
   },
   "manifest_version": 3,
-  "version": "0.0.7.600",
+  "version": "0.0.7.602",
   "web_accessible_resources": [
     {
       "resources": [
+        "icons/icon.svg",
         "vendor/scittle.js",
         "vendor/scittle.nrepl.js",
         "vendor/scittle.pprint.js",
