--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: extension/vendor
-          key: scittle-vendor-${{ runner.os }}-0.7.30
+          key: scittle-vendor-${{ runner.os }}-${{ hashFiles('scripts/tasks.clj') }}
 
       - name: Build release extensions
         run: bb build
@@ -92,7 +92,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: extension/vendor
-          key: scittle-vendor-${{ runner.os }}-0.7.30
+          key: scittle-vendor-${{ runner.os }}-${{ hashFiles('scripts/tasks.clj') }}
 
       - name: Build extension for testing
         run: bb build:test
